Make landing page scale correctly on mobile

--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+$small: 768px;
+
 @import "common";
 
 canvas {
@@ -13,13 +15,24 @@ section#home-content {
   width: 100%;
   bottom: 8%;
 
+  @media screen and (max-width: $small) {
+    bottom: 2%;
+  }
+
   #about-info {
     display: none;
     margin: 0 0 0 auto;
     opacity: 0;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     position: relative;
+    overflow-y: auto;
     width: 50%;
+
+    @media screen and (max-width: $small) {
+      width: 100%;
+      font-size: 14px;
+      padding-bottom: 0px;
+    }
 
     em {
       color: $primaryDarker;
@@ -49,6 +62,10 @@ section#home-content {
   .bottom {
     h1 {
       font-size: 3em;
+
+      @media screen and (max-width: $small) {
+        font-size: 1.5em;
+      }
     }
 
     h1,
@@ -65,6 +82,10 @@ section#home-content {
       cursor: pointer;
       transition: all 0.2s;
 
+      @media screen and (max-width: $small) {
+        font-size: 14px !important;
+      }
+
       &:hover {
         color: $primaryDarker;
         border-color: $primaryDarker;
@@ -77,6 +98,10 @@ section#home-content {
       li {
         display: inline;
         font-size: 2em;
+
+        @media screen and (max-width: $small) {
+          font-size: 1.5em;
+        }
 
         a {
           color: $primaryColor;
